added home page, footer and nav bar

--- a/the-apodaca-project/src/index.html
+++ b/the-apodaca-project/src/index.html
@@ -9,11 +9,40 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/themes/prism.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
+
 </head>
 
 <body>
   <app-root></app-root>
+
+  <footer>
+    <div class="contact">
+      <address>
+
+
+      </address>
+    </div>
+    <hr>
+    <div style="display: inline-block; width:100%">
+      <div style="float: left; width:25%; vertical-align: middle">
+        <p id="copy-right">&copy;Sketchy Observer</p>
+      </div>
+      <div style="float: left; margin-left: 8%; width:25%">
+        <h6>CONTACT US</h6>
+        <a href="mailto:theapodacaproject@gmail.com">TheApodacaProject@gmail.com</a><br>
+        <a href="tel:703-570-8181">P: 951 581 0117</a><br>
+        <a href="sms:703-995-4500">T: 951 581 0117</a><br>
+      </div>
+      <div style="float: right; margin-left: 8%; width:25%">
+        Visit us at:<br>
+        CORPORATE HEADQUARTERS <br>
+        11730 Plaza America Dr.<br>
+        2nd Floor<br>
+        Reston, VA 20190.<br>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
