--- a/the-apodaca-project/src/index.html
+++ b/the-apodaca-project/src/index.html
@@ -31,15 +31,14 @@
       <div style="float: left; margin-left: 8%; width:25%">
         <h6>CONTACT US</h6>
         <a href="mailto:theapodacaproject@gmail.com">TheApodacaProject@gmail.com</a><br>
-        <a href="tel:703-570-8181">P: 951 581 0117</a><br>
+        <a href="tel:703-570-8181">P: 951 581 0117</a>
+        <text>|</text>
         <a href="sms:703-995-4500">T: 951 581 0117</a><br>
       </div>
       <div style="float: right; margin-left: 8%; width:25%">
         Visit us at:<br>
         CORPORATE HEADQUARTERS <br>
         11730 Plaza America Dr.<br>
-        2nd Floor<br>
-        Reston, VA 20190.<br>
       </div>
     </div>
   </footer>
